# sqrProject

./: .gitignore  README.md  api.py  db.py  flake.nix  main.py  pyproject.toml  stores.db
.github/workflows/: main.yaml
app/: api.py  db.py  main.py  nix.py
tests/unit/: test_nix.py
