[tool.poetry]
name = "nix-store-explorer"
version = "0.1.0"
description = "A service for exploring Nix stores"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.8"
pytest = "^8.1.1"
fastapi = "^0.110.2"
openapi = "^1.1.0"
starlette = "^0.37.2"
bcrypt = "^4.1.2"
uvicorn = "^0.29.0"
pathlib = "^1.0.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
